fix: displaying correct images in gallery, feat: created contacts section, fix: removed max-height in projects section made it auto so it doesn't overlap

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -3,6 +3,10 @@
 	padding: 2rem 3rem;
 
 	&--spaced {
+		width: 100%;
+	}
+
+	&--large {
 		width: 47.5%;
 
 		@include respond (tab-port) {
