--- a/src/sass/layout/_projects.scss
+++ b/src/sass/layout/_projects.scss
@@ -1,6 +1,6 @@
 .projects {
 	width: 100%;
-	max-height: 400rem;
+	height: auto;
 	margin: 10vh 0;
 	padding: 0 5vw;
 
